remove ReserveCoinDenoms from CreatePool
